# advent2020

./: README.md  __hie.yaml  advent2020.cabal  hie.yaml
day11/: Main.hs
day12/: Main.hs
day13/: Main.hs
day14/: Main.hs
day15/: Main.hs
day16/: Main.hs
day17/: Main.hs
day18/: Main.hs
day19/: Main.hs
day20/: Main.hs
day21/: Main.hs
day22/: Main.hs
day23/: CircleST.hs  Main.hs
day24/: Main.hs
day25/: Main.hs
dayTemplate/: Main.hs
src/: Advent2020.hs
src/Advent2020/: BoundedSet.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  DayExample.hs  Input.hs
test/: Spec.hs
