cabal-version:       2.4
name:                advent2020
version:             0.0.0.0
synopsis:            Advent of Code 2020 exercises in Haskell
description:
    Advent of Code 2020 exercises in Haskell.
    See [README.md](https://github.com/gusbicalho/advent2020#advent2020) for more details.
homepage:            https://github.com/gusbicalho/advent2020
bug-reports:         https://github.com/gusbicalho/advent2020/issues
license:             MIT
license-file:        LICENSE
author:              Gustavo Bicalho
maintainer:          Gustavo Bicalho <gusbicalho@gmail.com>
copyright:           2020 Gustavo Bicalho
category:            Utility
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.1

source-repository head
  type:                git
  location:            https://github.com/gusbicalho/advent2020.git

common common-options
  build-depends:       base ^>= 4.14.0.0

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Advent2020

test-suite advent2020-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       advent2020
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
