cabal-version:       2.4
name:                advent2020
version:             0.0.0.0
synopsis:            Advent of Code 2020 exercises in Haskell
description:
    Advent of Code 2020 exercises in Haskell.
    See [README.md](https://github.com/gusbicalho/advent2020#advent2020) for more details.
homepage:            https://github.com/gusbicalho/advent2020
bug-reports:         https://github.com/gusbicalho/advent2020/issues
license:             MIT
license-file:        LICENSE
author:              Gustavo Bicalho
maintainer:          Gustavo Bicalho <gusbicalho@gmail.com>
copyright:           2020 Gustavo Bicalho
category:            Utility
build-type:          Simple
extra-doc-files:     README.md
tested-with:         GHC == 8.10.2

source-repository head
  type:                git
  location:            https://github.com/gusbicalho/advent2020.git

common common-options
  build-depends:       base ^>= 4.14.0.0
                     , containers

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

common optimize-a-lot
  ghc-options:         -foptimal-applicative-do
                       -fexpose-all-unfoldings
                       -fspecialise-aggressively
                       -fcross-module-specialise
                       -flate-specialise

common optimized-executable
  import:              optimize-a-lot
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

library
  import:              common-options
  import:              optimize-a-lot
  hs-source-dirs:      src
  build-depends:       base ^>= 4.14.0.0
                     , transformers
                     , array
                     , megaparsec
  exposed-modules:     Advent2020.BoundedSet
                     , Advent2020.Day01
                     , Advent2020.Day02
                     , Advent2020.Day03
                     , Advent2020.Day04
                     , Advent2020.Day05
                     , Advent2020.Day06
                     , Advent2020.Day07
                     , Advent2020.Day08
                     , Advent2020.Day09
                     , Advent2020.Day10
                     , Advent2020.Input

executable day11
  import:              common-options
  import:              optimized-executable
  hs-source-dirs:      day11
  main-is:             Main.hs
  build-depends:       advent2020

executable day12
  import:              common-options
  import:              optimized-executable
  hs-source-dirs:      day12
  main-is:             Main.hs
  build-depends:       advent2020

executable day13
  import:              common-options
  import:              optimized-executable
  hs-source-dirs:      day13
  main-is:             Main.hs
  build-depends:       advent2020

executable day14
  import:              common-options
  import:              optimized-executable
  hs-source-dirs:      day14
  main-is:             Main.hs
  build-depends:       advent2020

executable day15
  import:              common-options
  import:              optimized-executable
  hs-source-dirs:      day15
  main-is:             Main.hs
  build-depends:       hashtables
